<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_action_add_to_queue" android:id="@id/action_layers" android:visible="false" android:title="@string/show_layers" app:showAsAction="always" />
    <item android:icon="@drawable/ic_action_layout" android:id="@id/action_change_layout" android:title="@string/change_layout" app:showAsAction="always">
        <menu>
            <item
                android:id="@id/action_layout_dual"
                android:title="@string/layout_dual"/>
            <item
                android:id="@id/action_layout_schematic"
                android:title="@string/layout_schematic"/>
            <item
                android:id="@id/action_layout_board"
                android:title="@string/layout_board"/>
        </menu>
    </item>
    <item
        android:id="@id/action_zoom_to_fit"
        android:icon="@drawable/ic_action_zoom_to_fit"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/zoom_to_fit" />
    <item
        android:id="@id/action_flip"
        android:icon="@drawable/ic_action_flip"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/flip_view" />
    <item android:icon="@drawable/ic_action_search"
        android:id="@id/action_search"
        android:title="Search"
        android:visible="false"
        app:showAsAction="always" />
    <item android:icon="@drawable/ic_action_collection"
        android:id="@id/action_open"
        android:title="@string/open_file"
        app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_action_hide_toolbar"
        android:id="@id/action_hide_toolbar"
        android:title="@string/hide_toolbar"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item android:id="@id/action_blind_side_mode"
        android:icon="@drawable/ic_action_blind_side_mode"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/blind_side_mode" >
        <menu>
            <item
                android:id="@id/action_blind_side_default"
                android:title="@string/blind_side_default"/>
            <item
                android:id="@id/action_blind_side_hidden"
                android:title="@string/blind_side_hidden"/>
            <item
                android:id="@id/action_blind_side_transparent"
                android:title="@string/blind_side_transparent"/>
        </menu>
    </item>
    <item android:icon="@drawable/ic_action_deselect"
        android:id="@id/action_deselect"
        android:title="@string/deselect"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
